--- a/package.json
+++ b/package.json
@@ -1,1 +1,17 @@
+{
+  "name": "website",
+  "version": "1.0.0",
+  "description": "A fancy website",
+  "main": "index.js",
+  "scripts": {
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "socket.io": "^4.0.0"
+  },
+  "author": "miloszekxxdr",
+  "license": "MIT"
+}
 
